# bincaml

./: .gitattributes  .gitignore  .ocamlformat-ignore  bincaml.opam  dune-project  flake.nix  readme.md
.github/workflows/: deploy-doc.yml  test.yml
docs/: contributing.mld  dune  index.mld  tooling.mld
docs/dev/: known-bits.bib  known-bits.tex  readme.md  reduced-product.typ  wrapped-intervals.bib  wrapped-intervals.typ
examples/: test.s
lib/: contributing.mld  dune  loadir.ml  passes.ml  spec_modifies.ml
lib/analysis/: dataflow_graph.ml  defuse_bool.ml  dune  ide.ml  ide_live.ml  intra_analysis.ml  known_bits.ml  lattice_collections.ml  lattice_types.ml  tnum_wint_reduced_product.ml  wrapped_intervals.ml
lib/fe/: AbsBasilIR.ml  BNFC_Util.ml  BasilIR.cf  LexBasilIR.mll  ParBasilIR.mly  PrintBasilIR.ml  ShowBasilIR.ml  SkelBasilIR.ml  TestBasilIR.ml  dune
lib/lang/: ID.ml  algsimp.ml  ast.ml  ast_sandbox.ml  attrib.ml  block.ml  cf_tx.ml  common.ml  dune  expr.ml  expr_eval.ml  expr_smt.ml  interp.ml  livevars.ml  ops.ml  procedure.ml  prog.ml  program.ml  stmt.ml  value.ml  var.ml  viscfg.ml
lib/transforms/: cf_tx.ml  cleanup_cfg.ml  dune  ide.ml  lambda_lifting.ml  livevars.ml  may_read_uninit.ml  ssa.ml  type_check.ml
lib/util/: ID.ml  bitvec.ml  common.ml  dune  mtypes.ml  recursionscheme.ml  smt.ml  types.ml  unicode.ml  var.ml
test/: dune
test/analysis/: dune  ide_live.ml  lattice_collections.ml  ssadfg.ml  wrapped_intervals.ml
test/cram/: .gitignore  basicssa.sexp  basicssa.t  concat.il  dune  expr_smt.t  expr_smt_check.sexp  incorrect_types.il  lambdalifting.t  ll_real.sexp  ll_simple.il  ll_simple.sexp  ll_spec.il  ll_spec.sexp  memassign.il  memassign.t  roundtrip.sexp  roundtrip.t  ssa-multi-deps.il  typefail.sexp  typefail.t  typepass.sexp  typepass.t
test/lang/: dune  expr_eval_expect.ml  expr_eval_qcheck.ml  expr_gen.ml  pagetable_spec.ml  stmt.ml  value_soundness.ml
tools/: runperf.sh
tree-sitter/: .gitattributes  .gitignore  grammar.js  tree-sitter.json
tree-sitter/queries/: highlights.scm
