(library
 (public_name bincaml.util)
 (name bincaml_util)
 (modules
  mtypes
  common
  unicode
  var
  ID
  types
  bitvec
  zint
  reverse_graph
  recursionscheme)
 (libraries
  iter
  containers
  fix
  containers.pp
  containers-data
  zarith
  ocamlgraph)
 (inline_tests)
 (preprocess
  (pps
   ppx_deriving.show
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.map
   ppx_deriving.iter
   ppx_deriving.fold
   ppx_deriving.enum
   ppx_expect_nobase)))
