(cram
 (applies_to expr_smt)
 (enabled_if %{bin-available:cvc5})
 (deps
  %{bin:bincaml}
  ../../examples/cntlm-output.il
  expr_smt_check.sexp
  concat.il))

(cram
 (applies_to * \ expr_smt)
 (deps
  %{bin:bincaml}
  ssa-multi-deps.il
  ../../examples/irreducible_loop_1.il
  ../../examples/cat.il
  ../../examples/cntlm-output.il
  ../../examples/cntlm-simp-output.il
  incorrect_types.il
  ../../examples/x-output.il
  typefail.sexp
  typepass.sexp
  basicssa.sexp
  roundtrip.sexp))
