; common expr generator library

(library
 (name expr_gen)
 (modules expr_gen)
 (flags -w -27)
 (libraries
  qcheck-core
  (re_export containers)
  (re_export iter)
  (re_export containers.unix)
  (re_export bincaml.ast)
  (re_export bincaml.util)
  zarith))

; only enable this test if cvc available

(executable
 (name expr_eval_qcheck)
 (modules expr_eval_qcheck)
 (flags -w -27)
 (libraries str expr_gen alcotest qcheck-alcotest qcheck-core))

(rule
 (alias runtest)
 (enabled_if %{bin-available:cvc5})
 (action
  (run %{dep:expr_eval_qcheck.exe})))

(rule
 (alias runtest)
 (enabled_if
  (not %{bin-available:cvc5}))
 (action
  (echo "WARN: cvc5 not available, qcheck eval test disabled\n")))

; inline-test libs

(library
 (name expr_eval_expect)
 (modules expr_eval_expect stmt interp)
 (flags -w -27)
 (libraries expr_gen loader)
 (inline_tests)
 (preprocess
  (pps ppx_expect_nobase)))

; pagetable spec library

(library
 (name pagetable_spec)
 (modules pagetable_spec)
 (libraries
  iter
  zarith
  bincaml.ast
  bincaml.util
  qcheck-stm.stm
  qcheck-core
  qcheck-stm.sequential)
 (flags -w +27)
 (preprocess
  (pps
   ppx_deriving.show
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.map
   ppx_deriving.iter
   ppx_deriving.fold
   ppx_deriving.enum)))

; actual tests

(test
 (name pagetable_qcheck)
 (modules pagetable_qcheck)
 (flags -w -27)
 (libraries pagetable_spec qcheck-core.runner qcheck-stm.sequential))

(test
 (name value_soundness)
 (modules value_soundness)
 (flags -w -27)
 (libraries expr_gen alcotest qcheck-alcotest qcheck-core bincaml.analysis))
